# embeddings-101

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
server/: Dockerfile  main.py  requirements.txt
src/: adapters.py  main.py
src/dashboard/: api.py  app.py
tests/: conftest.py  test_embed.py  test_health.py
