[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "embeddings-server"
version = "0.1.0"
description = "Fast and Light Text Embedder"
requires-python = ">=3.8"
dependencies = [
  "fastapi",
  "uvicorn",
  "numpy",
  "sentence-transformers"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.optional-dependencies]
dev = [
  "pytest",
]